--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -6,8 +6,8 @@
 
     <Switch
         android:id="@+id/switch4"
-        android:layout_width="320dp"
-        android:layout_height="90dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -19,24 +19,23 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:text="Blue Loop"
+        android:textColorLink="@color/colorPrimary"
         android:textSize="24sp" />
 
     <Switch
         android:id="@+id/switch5"
-        android:layout_width="327dp"
-        android:layout_height="76dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/switch4"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="33dp"
-        android:layout_marginLeft="33dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="270dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginLeft="31dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginRight="26dp"
         android:checked="false"
         android:text="Green Loop"
         android:textSize="24sp"
