--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_direc"
+        android:icon="@drawable/ic_tram_black_24dp"
+
         android:title="Routes" />
 
     <item
