--- a/app/src/main/res/layout/nav_header_nav_drawer.xml
+++ b/app/src/main/res/layout/nav_header_nav_drawer.xml
@@ -20,6 +20,6 @@
         android:layout_height="wrap_content"
         android:src="@drawable/bale_g"
 
-        />
+        android:contentDescription="@string/todo" />
 
 </LinearLayout>
