--- a/app/src/main/res/layout/activity_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_nav_drawer.xml
@@ -2,15 +2,18 @@
 
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/drawer_layout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:fitsSystemWindows="true"
-tools:openDrawer="start">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:visibility="visible"
+    tools:openDrawer="start">
 
-    <include layout="@layout/app_bar_nav_drawer" />
+    <include
+        layout="@layout/app_bar_nav_drawer"
+        android:visibility="visible" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
