--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#122a79</color>
+    <color name="colorPrimaryDark">#1e1e1e</color>
+    <color name="colorAccent">#d3d3d3</color>
 </resources>
